--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,6 @@
 @use './_variables.scss';
 @use './_buttons.scss';
 @use './_form.scss';
+@use './_table.scss';
+@use './_module.scss';
+@use './_cards.scss';
