--- a/src/project/layout/header/styles.scss
+++ b/src/project/layout/header/styles.scss
@@ -16,20 +16,21 @@
         width: 40px;
         height: 40px;
         @include flex-center;
-        color: var(--text-primary) !important;
+        background-color: $primary-color !important;
+        color: var(--text-white) !important;
         transition: all 0.3s ease;
 
         &:hover {
-            background: $gradient-row;
-            color: var(--primary-color);
+            background-color: $primary-color !important;
+            color: var(--text-white) !important;
         }
 
         .toggle-icon {
             font-size: 20px;
 
             &:hover {
-                background: $gradient-row;
-                color: var(--primary-color);
+                background-color: $primary-color;
+                color: var(--text-white) !important;
             }
         }
     }
