--- a/src/project/layout/header/styles.scss
+++ b/src/project/layout/header/styles.scss
@@ -12,6 +12,10 @@
     top: 0;
     will-change: width;
 
+    .ant-btn-icon-only {
+        width: 40px !important;
+    }
+
     &-toggle {
         width: 40px;
         height: 40px;
@@ -27,6 +31,7 @@
 
         .toggle-icon {
             font-size: 20px;
+            margin-top: 2px;
 
             &:hover {
                 background-color: $primary-color;
