--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -15,11 +15,13 @@
     height: 38px;
     min-width: 38px;
     letter-spacing: 0.02em;
+    border-radius: 0;
 
     .anticon {
         font-size: 16px;
         display: flex;
         align-items: center;
+        justify-content: center;
     }
 
     // Size variants
@@ -27,6 +29,7 @@
         height: 32px;
         padding: 6px 16px;
         font-size: 13px;
+        border-radius: 0;
 
         .anticon {
             font-size: 14px;
@@ -37,6 +40,7 @@
         height: 44px;
         padding: 10px 24px;
         font-size: 15px;
+        border-radius: 0;
 
         .anticon {
             font-size: 18px;
@@ -63,6 +67,7 @@
             opacity: 0;
             transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             z-index: -1;
+            border-radius: 0;
         }
 
         &:hover {
