--- a/src/project/module/crm/system/stages/stage.scss
+++ b/src/project/module/crm/system/stages/stage.scss
@@ -7,6 +7,12 @@
     border: 1px solid $border-color;
     border-radius: $border-radius;
     box-shadow: 0 4px 20px $shadow-color;
+
+    @media (max-width: 1024px) {
+        border: none;
+        box-shadow: none;
+        background: transparent;
+    }
 }
 
 
